--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,8 @@ padding:3% 15% 7%
 
 /* Header */
 .big-heading{
-font-family: "Montserrat Black";
+font-family: "Montserrat
+font-weight: 900;
 font-size:3.2rem;
 line-height:1.5;
 }
